[tool.poetry]
name = "race"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
arcade = "^2.6.17"
pyglet = "^2.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
